tests/neg-custom-args/captures/eta.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/eta.scala:4:9 --------------------------------------------
4 |         g  // error
  |         ^
  |         Found:    (g : () -> A)
  |         Required: () -> Proc^{f}
  |
  |         Note that () ->{f} Unit does not conform to Proc^{f} because () ->{f} Unit is boxed but Proc^{f} is not.
  |
  | longer explanation available when compiling with `-explain`
